# server

./: .gitignore  CMakeLists.txt
include/: content-type.h  dispatch.h  httpcode.h  intmap.h  iterable.h  json.h  log.h  map.h  media.h  method.h  parsing.h  request.h  response.h  server.h  stringmap.h  strings.h  url.h  vector.h
resources/: index.html
src/: log.c  main.c  map.c  parsing.c  request.c  response.c  server.c  vector.c
src/http/: controller.c  controller.h  dispatch.c  json.c  media.c  request.c  response.c  server.c
src/http/common/: content-type.c
src/http/request/: httpcode.c  method.c  request.c
src/main/: main.c
src/map/: intmap.c  stringmap.c
src/parsing/: strings.c  url.c
